2007-10-02  Thomas Moulard  <thomas@moulard.net>

	Fix list concatenation.
	* src/uvalue.cc: Fix concatenation of two lists.

2007-10-02  Thomas Moulard  <thomas@moulard.net>

	Create 1.5 branch.
	* .automerge: New.

2007-10-01  Guillaume Deslandes  <deslandes@gostai.com>

	Fix timeout stoping background commands
	* src/ucommand.cc: Here.
	Timeout stoped whenever and at commands at once since they
	spawn in background (thus "killing" their AST branch).
	This may not be the best fix, but it seems to work.

2007-09-26  Guillaume Deslandes  <deslandes@gostai.com>

	Reactivate doc subdir
	* Makefile.am: Here.

2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>

	Remove extra include in ugrammar.y
	* src/parser/bison/ugrammar.y: Here.

2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>

	Restore KNOWN_BUGS, update libport external
	* KNOWN_BUGS: New.

2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>

	Merge nm branch to 1.0
	* ChangeLog: .
	* KNOWN_BUGS: Remove.
	* Makefile.am: .
	* doc/Doxyfile.in: .
	* src/flavorable.hh: .
	* src/network/bsdnet/network.cc: .
	* src/parser/bison/ugrammar.y: .
	* src/parser/bison/utoken.l: .
	* src/ucommand.cc: .
	* src/ucommand.hh: .
	* src/ucomplaints.cc: .
	* src/uexpression.cc: .
	* src/uobject.cc: .
	* src/userver.cc: .
	* src/userver.hh: .
	* src/utypes.hh: .
	* src/uvalue.cc: .
	* src/uvar.cc: .
	* src/uvariable.cc: .
	* src/uvariable.hh: .
	* tests-local.mk: .
	* vcs/local.rb: .

2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>

	Fix parser conflicts for URBI side pointers
	* src/parser/bison/ugrammar.y: Handle token arrow.
	Comment unstable array rules for now.
	* src/parser/bison/utoken.l: Add token arrow.

2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>

	Update mail address to mailing list
	* local.rb: Here.

2007-09-20  Guillaume Deslandes  <deslandes@gostai.com>

	Fixes and cleaning
	* Makefile.am: Update libport inclusion.
	* doc/Doxyfile.in: .